2006-06-27 Karsten Dambekalns <karsten@typo3.org>

	* typo3/init.php: Fixed bug #2871.
	* t3lib/class.t3lib_befunc.php: Fixed bug #3106, Documentation of function storeHash differs between class befunc and class page

2006-06-22  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Created exclusiveKeys for the TCA field configuration of type "select" [fix from 2006-03-19 was lost, see below]

2006-06-20  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #2839: Missing icons for copy mode and thumnails in clipboard (Web>List)

2006-06-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bug #3505: BE multi-language flexforms do not work (t3lib_tceforms)

2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Template tools (Web>Template) had hard-coded background colours
	* Made Web > Template > Info skinnable

2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Make t3lib_div::arrayToLogString() accept an empty string as empty list
	* Add missing icons for be users and admins.
	* Made Tools > User Admin skinnable
	* Fix bug #2938: edit icons have two title attributes, one hardcoded as an empty string

2006-06-04  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Unify PHP5 check in config_defaults.php and deprecate $TYPO_VERSION

2006-06-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3612: no c-prefix for URL fragment in menus (section index)
	* Fix bug #2493: TCE-forms don't skins icons / t3skin lacks undo.gif, csv.gif and savedoknew.gif (thanks to Clemens Riccabona for the latter)
	* Fix bugs #3326 and #3392: problems with php_uname()
	* "Update" buttons of admin panel did not reload page in Firefox

2006-05-31  Ernesto Baschny <ernst@cron-it.de>

	* Fix bug #3522: Linking images to hidden pages results in click-enlarge

2006-05-31 Bernhard Kraft  <kraftb@kraftb.at>

	* Fix a problem of the EM: "No file uploaded!" when retrying install after a failed dependency check
